More upsource script fixes

--- a/upsource.in
+++ b/upsource.in
@@ -2,9 +2,9 @@
 SOURCETAB=${1:-/etc/srctab}
 generate_commands()
 {
-	if test -f @LIBDIR@/config; then cat @LIBDIR@/config; fi
+	if test -f @LIBDIR@/config; then cat @LIBDIR@/config; fi;
 	echo "export PATH=@LIBDIR@/handlers:$$PATH";
-	grep -v "^\s*$" | grep -v "^[ 	]*[#;]" | awk -f sourcetab.awk
+	grep -v "^\s*$" | grep -v "^[ 	]*[#;]" | awk -f @LIBDIR@/sourcetab.awk;
 }
 for pre in @LIBDIR@/handlers/*.pre; do
     if test -x ${pre}; then ${pre}; fi; done
@@ -12,7 +12,7 @@ for pre in @LIBDIR@/handlers/*.pre; do
 cat $SOURCETAB | generate_commands | bash
 
 for run in @RUNDIR@/*.post; do
-    if test -f ${run}; ${run}; fi; done
+    if test -f ${run}; then ${run}; fi; done
 
 for post in @LIBDIR@/handlers/*.post; do
     if test -x ${post}; then ${post}; fi; done
