--- a/sourcetab.awk.in
+++ b/sourcetab.awk.in
@@ -1,1 +1,1 @@
-{env=""; if (NF<3) next; for (i=4; i<=NF; i++) {env=$i" "env}; print env "@LIBDIR@/handlers/"$1.upsource " " $2 " " $3;}
+{env=""; if (NF<3) next; for (i=4; i<=NF; i++) {env=$i" "env}; print env "@LIBDIR@/handlers/"$1".upsource" " " $2 " " $3;}
