--- a/etc/sysv-upsource.service.sh.in
+++ b/etc/sysv-upsource.service.sh.in
@@ -44,7 +44,7 @@ case "$1" in
         # this isn't a daemon
         ;;
     start|force-reload|restart|reload)
-	/usr/bin/upsource /etc/srcmap
+	/usr/bin/upsource @ETC@/srctab
 	;;
     *)
         echo 'Usage: /etc/init.d/upsource {start|reload|restart|force-reload|stop|status}'
