Better argument defaulting for upsource command

--- a/etc/systemd-upsource.service.in
+++ b/etc/systemd-upsource.service.in
@@ -16,7 +16,7 @@ Requires=network.target local-fs.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStart=/usr/bin/upsource @ETC@/srctab
+ExecStart=/usr/bin/upsource
 
 [Install]
 WantedBy=multi-user.target
