--- a/upsource.in
+++ b/upsource.in
@@ -1,21 +1,28 @@
 #!/bin/sh
-SOURCETAB=${1:-@ETC@/srctab}
-SOURCETABD=${1:-@ETC@/sourcetab.d}
-UPSOURCEPREFIX=@PREFIX@
-UPSOURCELIB=@LIB@
-UPSOURCERUN=@RUN@
+if test $# -eq 0; then
+    SOURCETAB=@ETC@/srctab;
+    SOURCETABD=@ETC@/sourcetab.d;
+else
+    SOURCETAB=$1
+    SOURCETABD=$2
+fi
+PREFIX=@PREFIX@
+UPSOURCE=@LIB@
+STATEDIR=@RUN@/upsource
+AWK=@AWK@
+
 sourcetab_command()
 {
-	grep -v "^\s*$" | grep -v "^[ 	]*[#;]" | awk -f @LIBDIR@/sourcetab.awk;
+	grep -v "^\s*$" | grep -v "^[ 	]*[#;]" | ${AWK} -f @LIBDIR@/sourcetab.awk;
 }
 generate_upsource_commands()
 {
     if test -f @ETC@/upsource.cfg.sh; then cat @ETC@/upsource.cfg.sh; fi;
     echo "export SSH_USER SSH_KEY OWNER GROUP SOURCETAB SOURCETABD";
-    echo "export UPSOURCELIB UPSOURCERUN UPSOURCEPREFIX";
+    echo "export PREFIX UPSOURCE STATEDIR";
     if test -f ${SOURCETAB}; then cat ${SOURCETAB} | sourcetab_command; fi;
-    if test -d ${SOURCTABD}; then
-	for tab in ${SOURCTABD}/*.srctab; do
+    if test ! -z "${SOURCETABD}" && test -d ${SOURCETABD}; then
+	for tab in ${SOURCETABD}/*.srctab; do
 	    cat ${tab} | sourcetab_command; 
 	done;
     fi;
