Add logdir config

--- a/upsource.in
+++ b/upsource.in
@@ -2,6 +2,7 @@
 PREFIX=@PREFIX@
 UPSOURCE=@LIBDIR@
 STATEDIR=@RUNDIR@
+LOGDIR=@LOGDIR@
 AWK=@AWK@
 CONFIG=${UPSOURCE_CONFIG:-@ETC@/upsource.d/config}
 
