Update systemd to have conditions for /etc/upsource.d

--- a/etc/systemd-upsource.service.in
+++ b/etc/systemd-upsource.service.in
@@ -9,8 +9,9 @@
 Description=Create/update srctab associations
 DefaultDependencies=no
 Conflicts=shutdown.target
-Before=framerd.service
-After=framerd.service cloud-final.service
+ConditionPathExists /etc/upsource.d/config
+ConditionPathExistsGlob /etc/upsource.d/*.srctab
+After=cloud-final.service
 Requires=network.target local-fs.target
 
 [Service]
