--- a/etc/systemd-upsource.service.in
+++ b/etc/systemd-upsource.service.in
@@ -7,7 +7,6 @@
 
 [Unit]
 Description=Create/update srctab associations
-DefaultDependencies=no
 Conflicts=shutdown.target
 ConditionPathExists=/etc/upsource.d/config
 ConditionPathExistsGlob=/etc/upsource.d/*.srctab
@@ -15,7 +14,8 @@ After=cloud-final.service
 Requires=network.target local-fs.target
 
 [Service]
+Type=oneshot
 ExecStart=/usr/bin/upsource /etc/upsource.d/
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
