--- a/etc/systemd-upsource.service.in
+++ b/etc/systemd-upsource.service.in
@@ -7,6 +7,7 @@
 
 [Unit]
 Description=Create/update srctab associations
+DefaultDependencies=no
 Conflicts=shutdown.target
 ConditionPathExists=/etc/upsource.d/config
 ConditionPathExistsGlob=/etc/upsource.d/*.srctab
@@ -14,8 +15,7 @@ After=cloud-final.service
 Requires=network.target local-fs.target
 
 [Service]
-Type=oneshot
 ExecStart=/usr/bin/upsource /etc/upsource.d/
 
 [Install]
-WantedBy=default.target
+WantedBy=multi-user.target
