--- a/etc/systemd-upsource.service.in
+++ b/etc/systemd-upsource.service.in
@@ -1,20 +1,19 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
+#  This is part of the the systemd configuration for upsource
 
 [Unit]
-Description=Create/update srctab associations
+Description=Download or update local files remote remote sources based on sourcetabs in /etc/upsource.d/
 Conflicts=shutdown.target
 ConditionPathExists=/etc/upsource.d/config
 ConditionPathExistsGlob=/etc/upsource.d/*.srctab
-After=cloud-final.service
 Requires=network.target local-fs.target
+After=cloud-final.service
+DefaultDependencies=false
 
 [Service]
+Type=oneshot
+RemainAfterExit=true
 ExecStart=/usr/bin/upsource /etc/upsource.d/
+#Environment=SYSTEMD_LOG_LEVEL=debug
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
